Add message should trigger message handlers